[package]
name = "libsignal-protocol"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "../README.md"
description = "An idiomatic high-level interface to the libsignal-protocol-c crate."
homepage = "https://github.com/Michael-F-Bryan/libsignal-protocol-rs"
repository = "https://github.com/Michael-F-Bryan/libsignal-protocol-rs"
keywords = ["signal", "libsignal", "whisper", "protocol"]
categories = ["api-bindings", "cryptography"]

[dependencies]
libsignal-protocol-sys = { path = "../libsignal-protocol-sys/" }
failure = "0.1.5"
failure_derive = "0.1.5"
rand = "0.6.5"
parking_lot = "0.8.0"
lock_api = "0.2.0"
openssl = { version = "0.10", optional = true }
sha2 = { version = "0.8.0", optional = true }
hmac = { version = "0.7.0", optional = true }

[features]
default = ["crypto-native"]
crypto-native = ["sha2", "hmac"] # TODO(shekohex): find a way to add `aes`.
crypto-openssl = ["openssl"]